test/cli/test-mutating-policy/json-root-transitions/policy.yaml
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: to-array
spec:
  evaluation:
    mode: JSON
  mutations:
  - patchType: JSONPatch
    jsonPatch:
      expression: '[JSONPatch{op: "replace", path: "", value: [object, 9007199254740993]}]'
---
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: to-scalar
spec:
  evaluation:
    mode: JSON
  mutations:
  - patchType: JSONPatch
    jsonPatch:
      expression: '[JSONPatch{op: "replace", path: "", value: object[1]}]'
---
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: to-null
spec:
  evaluation:
    mode: JSON
  mutations:
  - patchType: JSONPatch
    jsonPatch:
      expression: '[JSONPatch{op: "replace", path: "", value: null}]'
